# intro_to_algo

./: .gitignore  Cargo.toml  README.md  meson.build
cmd/: build.sh  clean.sh  prep.sh  run.sh
src/: insertion_sort.c  main.rs  meson.build
src/algorithms/: insertion_sort.rs  merge_sort.rs
tests/: test_insertion_sort.proptest-regressions  test_insertion_sort.rs  test_merge_sort.proptest-regressions  test_merge_sort.rs
